@@ -18,22 +18,14 @@
 
 #ifndef MUSIC_INTERVAL_HH
 namespace MUSIC {
-  /* remedius
-   * ICloneable class was created in order to support polymorphism for
-   * intervals.
-   */
-  class ICloneable {
-  public:
-    virtual ICloneable* clone () const = 0;
-  };
 
-  class Interval : public ICloneable {
+  class Interval {
     int begin_;
     int end_;
   public:
     Interval () { }
     Interval (int b, int e) : begin_ (b), end_ (e) { }
-    virtual ~Interval () { }
+    ~Interval () { }
     int begin () const { return begin_; }
     int end () const { return end_; }
     void setBegin (int begin) { begin_ = begin; }
@@ -46,16 +38,6 @@ namespace MUSIC {
     {
       return begin () < data.begin ();
     }
-  };
-
-  /*
-   * Smart pointer with value semantics
-   */
-  class IntervalPtr {
-    Interval* ptr_;
-  public:
-    IntervalPtr (Interval* ptr) : ptr_ (ptr) { }
-    ~IntervalPtr () { delete ptr_; }
   };
 
 }
